Fix some alignment stuff

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,2 +1,11 @@
 a
   color: #00B7FF
+
+.cover-container
+  max-width: 42em
+
+/*
+ * Header
+ */
+.masthead
+  margin-bottom: 2rem
